// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/git getBranchCommit(branchName) should throw if branch does not exist 1`] = `[Error: Cannot fetch commit for branch that does not exist: not_found]`;

exports[`platform/git getBranchFiles(branchName, baseBranchName?) detects changed files 1`] = `
Array [
  "some-new-file",
]
`;

exports[`platform/git getBranchFiles(branchName, baseBranchName?) detects changed files compared to current base branch 1`] = `
Array [
  "some-new-file",
]
`;

exports[`platform/git getCommitMessages() returns commit messages 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git getFile(filePath, branchName) returns null for 404 1`] = `[Error: repository-changed]`;

exports[`platform/git getFileList() should exclude submodules 1`] = `
Array [
  ".gitmodules",
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`platform/git getFileList() should return the correct files 1`] = `
Array [
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`platform/git initRepo()) should fetch latest 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git initRepo()) should fetch latest 2`] = `
Array [
  "past message2",
  "master message",
]
`;

exports[`platform/git isBranchStale() should throw if branch does not exist 1`] = `[Error: Cannot check staleness for branch that does not exist: not_found]`;

exports[`platform/git setBaseBranch(branchName) should throw if branch does not exist 1`] = `[Error: config-validation]`;
